HelloUltraviolet/Fixtures/RejectedSource/Keys/OrderedDifferentBase/Source/Main.uv
//! Rejected key-system specimen for ordered key blocks over different path bases.

public procedure orderedDifferentBaseReference() -> i32 {
    var left_values: shared [i32; 2] = [1, 2]
    var right_values: shared [i32; 2] = [3, 4]
    #left_values[0usize], right_values[0usize] ordered read {
        let total: i32 = left_values[0usize] + right_values[0usize]
    }
    return 0
}
